fixed overlaps desktop + mobile

--- a/public/home/css/site.styl
+++ b/public/home/css/site.styl
@@ -285,6 +285,7 @@ h1,h2,h3,h4,h5
   top: 50%;
   margin-left: -453px;
   margin-top: -273px;
+  z-index: 1001
 }
 .phone.p2 {
   left: 50%;
@@ -293,11 +294,12 @@ h1,h2,h3,h4,h5
   margin-top: -273px;
   transform: scale(0.8);
   -webkit-transform: scale(0.8);
+  z-index: 1000
 }
 .phone.p3 {
   background-image: url("../img/htc-shadow.png");
   left: 50%;
-  top: 50%;
+  top: 46%;
   margin-top: -200px;
   margin-left: -320px;
   transform: scale(0.8);
@@ -385,7 +387,7 @@ h1,h2,h3,h4,h5
   
 .text.t1 
   opacity: 1;
-  z-index: 100;
+  z-index: 1001;
   margin-top: -200px
   
   .how-it-works
@@ -737,7 +739,7 @@ h1,h2,h3,h4,h5
   background-position: center;
   position: fixed;
   top: 50%;
-  left: 40%;
+  left: 41%;
   margin-left: -146px;
   opacity: 0;
 }
@@ -921,7 +923,6 @@ h1,h2,h3,h4,h5
     right: 14px
     
     .dropdown-download {
-      background: white
       width: 312px
       padding: 0
       top: 34px
@@ -937,6 +938,7 @@ h1,h2,h3,h4,h5
   }
   .arrow {
     top: 53%
+    left: 40%
   }
   .poweredby {
     display: none;
@@ -976,9 +978,11 @@ h1,h2,h3,h4,h5
     -webkit-transform: scale(0.6);
     margin-left: -293px;
     top: 52%
+    z-index: 1002
   }
   .laptop {
     top: 70%
+    left: 54%
   }
   .text {
     top: 70px;
@@ -996,6 +1000,7 @@ h1,h2,h3,h4,h5
     display: none
   }
   .text h2 {
+    background: white
     margin: 0
     font-size: 25px
   }
